# motdle

./: .gitignore  README.md  prompt  pyproject.toml
scripts/: generate_emojis.py  upload_emojis.py
src/motdle/: __main__.py
src/motdle/bot/: client.py
src/motdle/bot/cogs/: scheduler.py  wordle.py
src/motdle/bot/views/: classement_view.py  daily_view.py  game_view.py  guess_modal.py  image_renderer.py  play_button.py  renderer.py
src/motdle/core/: database.py  evaluator.py  game.py  words.py
src/motdle/data/: words_fr.txt
src/motdle/terminal/: runner.py
tests/: test_database.py  test_evaluator.py  test_game.py
